--- a/.travis.yml
+++ b/.travis.yml
@@ -11,17 +11,14 @@ env:
     - DJANGO_SETTINGS_MODULE="tests.app.settings"
     - TOX_ENV=
   matrix:
-    - DJANGO='18'
-      WAGTAIL='14'
-    - DJANGO='19'
-      WAGTAIL='14'
-    - DJANGO='18'
-      WAGTAIL='15'
-    - DJANGO='19'
-      WAGTAIL='15'
+    - DJANGO='18' WAGTAIL='14'
+    - DJANGO='19' WAGTAIL='14'
+    - DJANGO='18' WAGTAIL='15'
+    - DJANGO='19' WAGTAIL='15'
 
 
 install:
+  - ./tests/scripts/install-ffmpeg.sh
   - pip install --upgrade pip wheel tox
 
 cache:
