Made plugin python 2 compatible

--- a/tox.ini
+++ b/tox.ini
@@ -2,15 +2,16 @@
 skip_missing_interpreters = True
 
 envlist =
-	py{34,35}-dj{18,19}-wt{14,15}
+	py{27,34,35}-dj{18,19}-wt{14,15}
 
 
 [testenv]
-commands=python runtests.py
+commands=python runtests.py {posargs}
 usedevelop = True
 pip_pre = True
 
 basepython =
+	py27: python2.7
 	py34: python3.4
 	py35: python3.5
 
