--- a/tox.ini
+++ b/tox.ini
@@ -18,5 +18,6 @@ basepython =
 deps =
 	dj18: Django~=1.8.0
 	dj19: Django~=1.9.0
+	wt13: wagtail~=1.3.0
 	wt14: wagtail~=1.4.0
 	wt15: wagtail~=1.5.0
