--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 skip_missing_interpreters = True
 
 envlist =
-	py{27,34,35}-dj{18,19}-wt{14,15}
+	py{27,34,35}-dj{18,19,110}-wt{14,15}
 
 
 [testenv]
@@ -19,6 +19,7 @@ deps =
 	mock
 	dj18: Django~=1.8.0
 	dj19: Django~=1.9.0
+	dj110: Django~=1.10.0
 	wt13: wagtail~=1.3.0
 	wt14: wagtail~=1.4.0
 	wt15: wagtail~=1.5.0
