--- a/tox.ini
+++ b/tox.ini
@@ -2,18 +2,17 @@
 skip_missing_interpreters = True
 
 envlist =
-	py{27,34,35}-dj{18,19,110}-wt{14,15}
+	# Wagtail LTS
+	py{27,34,35}-dj{18,19}-wt14
+	# Last version
+	py{27,34,35}-dj{18,19}-wt15
+	# Current version
+	py{27,34,35}-dj{19,110}-wt16
 
 
 [testenv]
-commands=python runtests.py {posargs}
-usedevelop = True
+commands = python runtests.py {posargs}
 pip_pre = True
-
-basepython =
-	py27: python2.7
-	py34: python3.4
-	py35: python3.5
 
 deps =
 	mock
@@ -23,3 +22,4 @@ deps =
 	wt13: wagtail~=1.3.0
 	wt14: wagtail~=1.4.0
 	wt15: wagtail~=1.5.0
+	wt16: wagtail~=1.6.0
