--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ env:
     - DJANGO='19' WAGTAIL='15'
     - DJANGO='19' WAGTAIL='16'
     - DJANGO='110' WAGTAIL='16'
+    - TOX_ENV=flake8,isort
 
 before_install:
     # - sudo add-apt-repository ppa:mc3man/trusty-media -y // Inlcudes all multimedia options but 404s currently :(
