--- a/tox.ini
+++ b/tox.ini
@@ -8,14 +8,18 @@ envlist =
 	py{27,34,35}-dj{18,19}-wt15
 	# Current version
 	py{27,34,35}-dj{19,110}-wt16
+	# Enforce good style
+	flake8,isort
 
+[base]
+deps = mock
 
 [testenv]
 commands = python runtests.py {posargs}
 pip_pre = True
 
 deps =
-	mock
+	{[base]deps}
 	dj18: Django~=1.8.0
 	dj19: Django~=1.9.0
 	dj110: Django~=1.10.0
@@ -23,3 +27,16 @@ deps =
 	wt14: wagtail~=1.4.0
 	wt15: wagtail~=1.5.0
 	wt16: wagtail~=1.6.0
+
+[testenv:flake8]
+deps = flake8
+basepython = python3.5
+commands = flake8 wagtailvideos/ tests/
+
+[testenv:isort]
+usedevelop = True
+deps =
+	{[base]deps}
+	isort==4.2.2
+basepython = python3.5
+commands = isort --recursive --diff --check-only wagtailvideos/ tests/
