--- a/.travis.yml
+++ b/.travis.yml
@@ -8,45 +8,23 @@ env:
   matrix:
     - TOX_ENV=flake8,isort
 
+
+python:
+  - 2.7
+  - 3.4
+  - 3.5
+
+env:
+  - DJANGO='19' WAGTAIL='17'
+  - DJANGO='110' WAGTAIL='17'
+  - DJANGO='19' WAGTAIL='18'
+  - DJANGO='110' WAGTAIL='18'
+
+
 matrix:
-  - env: DJANGO='18' WAGTAIL='14'
-    python: 2.7
-  - env: DJANGO='18' WAGTAIL='14'
-    python: 3.4
-  - env: DJANGO='18' WAGTAIL='14'
-    python: 3.5
-  - env: DJANGO='19' WAGTAIL='14'
-    python: 2.7
-  - env: DJANGO='19' WAGTAIL='14'
-    python: 3.4
-  - env: DJANGO='19' WAGTAIL='14'
-    python: 3.5
-  - env: DJANGO='18' WAGTAIL='15'
-    python: 2.7
-  - env: DJANGO='18' WAGTAIL='15'
-    python: 3.4
-  - env: DJANGO='18' WAGTAIL='15'
-    python: 3.5
-  - env: DJANGO='19' WAGTAIL='15'
-    python: 2.7
-  - env: DJANGO='19' WAGTAIL='15'
-    python: 3.4
-  - env: DJANGO='19' WAGTAIL='15'
-    python: 3.5
-  - env: DJANGO='19' WAGTAIL='16'
-    python: 2.7
-  - env: DJANGO='19' WAGTAIL='16'
-    python: 3.4
-  - env: DJANGO='19' WAGTAIL='16'
-    python: 3.5
-  - env: DJANGO='110' WAGTAIL='16'
-    python: 2.7
-  - env: DJANGO='110' WAGTAIL='16'
-    python: 3.4
-  - env: DJANGO='110' WAGTAIL='16'
-    python: 3.5
-  - env: TOX_ENV='flake8,isort'
-    python: 3.5
+  include:
+    - env: TOX_ENV='flake8,isort'
+      python: 3.5
 
 before_install:
     # - sudo add-apt-repository ppa:mc3man/trusty-media -y // Inlcudes all multimedia options but 404s currently :(
