--- a/tox.ini
+++ b/tox.ini
@@ -2,12 +2,7 @@
 skip_missing_interpreters = True
 
 envlist =
-	# Wagtail LTS
-	py{27,34,35}-dj{18,19}-wt14
-	# Last version
-	py{27,34,35}-dj{18,19}-wt15
-	# Current version
-	py{27,34,35}-dj{19,110}-wt16
+	py{27,34,35}-dj{19,110}-wt{17,18}
 	# Enforce good style
 	flake8,isort
 
@@ -23,10 +18,8 @@ deps =
 	dj18: Django~=1.8.0
 	dj19: Django~=1.9.0
 	dj110: Django~=1.10.0
-	wt13: wagtail~=1.3.0
-	wt14: wagtail~=1.4.0
-	wt15: wagtail~=1.5.0
-	wt16: wagtail~=1.6.0
+	wt17: wagtail~=1.7.0
+	wt18: wagtail~=1.8rc1
 
 [testenv:flake8]
 deps = flake8
