--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,8 @@
 skip_missing_interpreters = True
 
 envlist =
-	py{27,34,35}-dj{19,110}-wt{17,18}
+	py{27,34,35}-dj{110}-wt{19}
+	py{27,34,35}-dj{110,111}-wt{110}
 	# Enforce good style
 	flake8,isort
 
@@ -18,8 +19,11 @@ deps =
 	dj18: Django~=1.8.0
 	dj19: Django~=1.9.0
 	dj110: Django~=1.10.0
+	dj111: Django~=1.11.0
 	wt17: wagtail~=1.7.0
-	wt18: wagtail~=1.8rc1
+	wt18: wagtail~=1.8.0
+	wt19: wagtail~=1.9.0
+	wt110: wagtail~=1.10.0
 
 [testenv:flake8]
 deps = flake8
