--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 skip_missing_interpreters = True
 
 envlist =
-	py{34,35,36}-dj{20}-wt{20}
+	py{34,35,36}-dj{110,20}-wt{20,21}
 	# Enforce good style
 	flake8,isort
 
@@ -15,8 +15,10 @@ pip_pre = True
 
 deps =
 	{[base]deps}
+	dj111: Django~=1.11.0
 	dj20: Django~=2.0.0
 	wt20: wagtail~=2.0.0
+	wt21: wagtail~=2.1.0
 
 [testenv:flake8]
 deps = flake8
